--- a/releated-work.tex
+++ b/releated-work.tex
@@ -5,8 +5,11 @@ This section presents the main previous work on the employment of CDN solutions 
 
 
 % Modeling and Analyzing the Influence of Chunk Size Variation on Bitrate Adaptation in DASH
-Zhang \textit{et al.} seek to focus on two aspect metrics on the client-side - rebuffering probability and average bitrate level - they theorically analyze the influence of chunk size variation on bitrate adaptation algorithm performance. while Shen \textit{et al.} deploy the a cache proxy service on Point of Presence to deal with the cache miss and how transferring chunks based on TCP impacts directly on QoE.
+Zhang \textit{et al.} seek to focus on two aspect metrics on the client-side - rebuffering probability and average bitrate level - they theorically analyze the influence of chunk size variation on bitrate adaptation algorithm performance. while Shen \textit{et al.} deploy the a cache proxy service on Point of Presence to deal with the cache miss, the cache proxyes downlod the multimedia content for provide and how transferring chunks based on TCP impacts directly on QoE.
 
+
+
+This proposal is different because of We are attempting to address in a different way. Where differents nodes can provisioning the video chunks looking for assist the content providers in provisioning the video segments. 
 % Chunk-Level Request-Grant-Transfer Mode for QoE-Sensitive Video Delivery in CDN
 
 
