--- a/contributions.tex
+++ b/contributions.tex
@@ -5,8 +5,11 @@
 
 % Having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources. The framework solution can be used to assist the content providers joinging the content in the edge of the network, in this way, the regionals networks may attend the end-users. Moreover, due to intense competition among the nodes, this available bandwidth is also not fully utilized. Based on these, various population control measures have been suggested for both mesh-based and tree-based systems.
 
-This includes, among others, the creation of new communication mechanisms to offer better support to the transmission of large amounts of multimedia streams. Therefore, this project is aligned with InterSCity by proposing an optimized video delivery mechanism to enhance the stream’s quality, being directly related to the “Networking and High Performance Distributed Computing” INCT research line.
-The aimed mechanism solution can be used to assist the content providers accomodating the multimedia segmente in different network tiers, in this way, the regionals networks may attend the end-users. This project is aligned with the google products which may be deployed lika a plugin in google chrome or a android app, beyond that, the deployment of such service in different Point of Presence nodes for improve the QoE. Such mechanisms willbe deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. 
+The aimed mechanism solution can be used to assist the content providers accomodating the multimedia segments in different network tiers, in this way, the regionals networks may attend the end-users. This project is aligned with the google products which may be deployed such as a plugin in a web browser or a mobile app, beyond that, the service deployment possibility in different Point of Presence nodes in many situations. it is also possible to program a long-term lease, for example, to an electrical utility company to accommodate its smart grid components such as meters, sensors, controllers, and other IoT devices. A short-term lease is also feasible, for example, when a public venue or a concert promoter wants to have a dedicated slice for a weekend-long festival and optimize it for streaming high-quality video and music data.
+
+ Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. 
+This includes, among others, the creation of new communication mechanisms to offer better support to the transmission of large amounts of multimedia streams. %In this way, this project is aligned with InterSCity by proposing an optimized video delivery mechanism to enhance the stream’s quality, being directly related to the “Networking and High Performance Distributed Computing” INCT research line.
+In addition, this PhD proposal is aligned with InterSCity~\footnote{http://interscity.org} by proposing an optimized video delivery mechanism to enhance the stream’s quality in SmartCities.
 
 %The InterSCity project [6, 7, 8] addresses key research challenges in smart cities in order to
 %efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. One of the main goals of the project is to develop an open-source platform encapsulating all the necessary %building blocks for the development of applications for smart cities.
