--- a/contributions.tex
+++ b/contributions.tex
@@ -1,17 +1,49 @@
-\section{Contributions}
+\subsection*{Contributions}
 \label{sec:contributions}
 
 % Description of the work you'd like to do, as well as the expected outcomes and results.
 
 % Having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources. The framework solution can be used to assist the content providers joinging the content in the edge of the network, in this way, the regionals networks may attend the end-users. Moreover, due to intense competition among the nodes, this available bandwidth is also not fully utilized. Based on these, various population control measures have been suggested for both mesh-based and tree-based systems.
 
-The aimed mechanism solution can be used to assist the content providers accomodating the multimedia segments in different network tiers, in this way, the regionals networks may attend the end-users. This project is aligned with the google products which may be deployed such as a plugin in a web browser or a mobile app, beyond that, the service deployment possibility in different Point of Presence nodes in many situations. it is also possible to program a long-term lease, for example, to an electrical utility company to accommodate its smart grid components such as meters, sensors, controllers, and other IoT devices. A short-term lease is also feasible, for example, when a public venue or a concert promoter wants to have a dedicated slice for a weekend-long festival and optimize it for streaming high-quality video and music data.
+%The aimed mechanism solution can be used to assist the content providers, accomodating the multimedia segments in different network tiers, in this way, the regionals networks may attend the end-users. This project is aligned with the google products which may be deployed such as a plugin in a web browser or a mobile app, beyond that, the service deployment possibility in different Point of Presence nodes in many situations. it is also possible to program a long-term lease, for example, to an electrical utility company to accommodate its smart grid components such as meters, sensors, controllers, and other IoT devices. A short-term lease is also feasible, for example, when a public venue or a concert promoter wants to have a dedicated slice for a weekend-long festival and optimize it for streaming high-quality video and music data.
 
- Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. 
+We aim to design an hierarchical adaptive multimedia delivery collaboration strategies, aiming to approach the theoretical
+performance boundary. We proposed two strategies:
+
+Build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation hierarchical scheduling algorithm;
+
+Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. 
 This includes, among others, the creation of new communication mechanisms to offer better support to the transmission of large amounts of multimedia streams. %In this way, this project is aligned with InterSCity by proposing an optimized video delivery mechanism to enhance the stream’s quality, being directly related to the “Networking and High Performance Distributed Computing” INCT research line.
-In addition, this PhD proposal is aligned with InterSCity~\footnote{http://interscity.org} by proposing an optimized video delivery mechanism to enhance the stream’s quality in SmartCities.
+In addition, this PhD proposal is aligned with InterSCity~\footnote{http://interscity.org} by proposing an optimized video delivery mechanism to enhance the stream's quality in SmartCities.
 
 %The InterSCity project [6, 7, 8] addresses key research challenges in smart cities in order to
 %efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. One of the main goals of the project is to develop an open-source platform encapsulating all the necessary %building blocks for the development of applications for smart cities.
 
-
+%Neste trabalho, queremos construir mecanismo para um sistema de distribuição adaptativo multimidia baseado em DASH, buscando o otimizar sua topologia de forma adaptativa para minimizar a latência de reprodução média e melhorar a entrega do fluxo de forma oportuna. 
+%Neste trabalho, queremos construir um sistema CDN na fog com o uso de cache e sobreposição
+%de rede para para streaming de video ao vivo, e otimizar sua topologia de forma adaptativa para
+%minimizar a latência de reprodução média e melhorar a entrega do fluxo de forma oportuna.
+%A latência de reprodução é a diferença entre o tempo de reprodução (ponto de reprodução) na
+%origem de midia e em um nó.
+%Modelagem de propriedades de balanceamento de carga e desempenho de cache
+%em sistemas de Névoa-Nuvem multicamadas.
+%1. Interesses perspectivas do usuário, provedor de serviços e provedor de rede.
+%2. Qual a melhor forma de operar problemas de cache em névoa-nuvem? Onde? Quando?
+%Como?
+%3. Redimensionar recursos necessários para suportar demanda de Acordo com o tempo.
+%4. Utilizar máquinas virtuais (container, microservices) para atingir a latência minima para
+%acelerar a execução do escalonamento, mas irá implicar em desperdicios de recurso (e
+%dinheiro)? Caso sim, como minimizar este desperdicio?
+%
+%Suporte a mobilidade.
+%1. Quais mecanismos devemos utilizar/desenvolver para lidar com a mobilidade do usuário?
+%Como dividir o conteúdo e recursos computacionais?
+%2. Como utilizar a informação de localização para estimar melhores caminhos/ganho/ em
+%tempo real dos servidores de borda. Como estimar dinamicamente o ganho entre as dife-
+%rentes perspectivas da proximidade dos servidores.
+%3. É necessário re-distribuir o conteúdo não requisitado ou apenas adicionar o conteúdo em
+%outros servidores de borda quando o usuário muda servidor? Quais nós devem fazer isso?
+%4. É necessário possuir nós reservados extras e prontamente disponiveis com intuito de re-
+%dundância de recurso computacional?
+%5. Antes de escolher um provedor de IaaS para alocar máquinas, quais serviços é necessário
+%acrescentar para o provisionamento do conteúdo?
