--- a/paper.tex
+++ b/paper.tex
@@ -11,6 +11,12 @@
 
 \usepackage{sectsty}
 
+\usepackage{gensymb}
+\usepackage{textcomp}
+
+\usepackage{caption}
+\captionsetup[figure]{font=footnotesize}
+
 \sectionfont{\fontsize{12}{15}\selectfont}
 
 \begin{document}
@@ -22,11 +28,11 @@
 	\section{Overview}
 
 	\noindent
-	{\bf Proposal Title:} \\
+	{\bf Proposal Title:} Multi-tier Video Delivery for Future Generation of Smart Cities \\
 	{\bf Faculty Full Name:} Luiz Fernando Bittencourt \hfill bit@ic.unicamp.br \\
 	{\bf PhD candidate:} Eduardo de Souza Gama \hfill eduardogama@lrc.ic.unicamp.br \\
-	Instituto de Computação, Universidade Estadual de Campinas \\
-	Av. Albert Einstein, 1251, 13087-460, Campinas-SP, Brazil \\
+	Institute of Computing, State University of Campinas \\
+	Av. Albert Einstein, n° 1251, 13087-460, Campinas-SP, Brazil \\
 	% {\bf Google Contact name:} Walfredo Cirne
 	% \normalsize ECE 100-003 \hfill Teammates: Student1, Student2 \\
 	% TA: Adam Sumner \hfill Due Date: XX/XX/XX
@@ -42,37 +48,43 @@
     
     \input{releated-work}
 
+\begin{footnotesize}
 \begin{thebibliography}{11}
 
+
+\bibitem{zhangINFOCOM17} Tong Zhang, Fengyuan Ren, Wenxue Cheng, Xiaohui Luo, Ran Shu, Xiaolan Liu. Modeling and Analyzing the Influence of Chunk Size Variation on Bitrate Adaptation in DASH. INFOCOM 2017.
+
 \bibitem{bonomi14} F. Bonomi, R. Milito, P. Natarajan, and J. Zhu, Fog Computing: A Platform for Internet of Things and Analytics, pp. 169–186. Cham: Springer International Publishing, 2014.
-
+%\vspace{-0.2cm}
 \bibitem{talebComMag17} T. Taleb, S. Dutta, A. Ksentini, M. Iqbal, and H. Flinck, "Mobile edge computing potential in making cities smarter," Comm. Mag., vol. 55, pp. 38–43, Mar. 2017.
-
+%\vspace{-0.2cm}
 \bibitem{shenIWQoS19} Gengbiao Shen, Qing Li, Yong Jiang, Richard Sinnott, Dong Lin, Zehua Guo, Yi Wang. Chunk-Level Request-Grant-Transfer Mode for QoE-Sensitive Video Delivery in CDN. IWQoS, 2019.
-
+%\vspace{-0.2cm}
 \bibitem{Bittencourt} Luiz F. Bittencourt, Márcio Moraes Lopes, Ioan Petri, Omer F. Rana \emph{Towards Virtual Machine Migration in Fog Computing}. 10th International Conference on P2P, Parallel, Grid, Cloud and Internet Computing. 2015.
-
+%\vspace{-0.2cm}
 \bibitem{BittencourtII} Luiz F. Bittencourt, Omer F. Rana, and Ioan Petri,. \emph{Cloud Computing at the Edges}. Springer International Publishing. 2016. pp. 3–12.
-
+%\vspace{-0.2cm}
 \bibitem{Byers}  Byers, Charles C. and Wetterwald, Patrick. 2015. \emph{Fog Computing Distributing Data and Intelligence for Resiliency and Scale Necessary for IoT: The Internet of Things (Ubiquity Symposium)}. Ubiquity 2015, November, Article 4 (November 2015), 12 pages.
-
+%\vspace{-0.2cm}
 \bibitem{Bonomi} F. Bonomi, R. Milito, J. Zhu, and S. Addepalli \emph{Fog computing and its role in the internet of things}. In workshop on Mobile cloud computing. ACM, 2012.
-
+%\vspace{-0.2cm}
 \bibitem{StojmenovicI} I. Stojmenovic \emph{Fog computing: A cloud to the ground support for smart things and machine-to-machine networks}. In ATNAC. IEEE, 2014.
-
+%\vspace{-0.2cm}
 \bibitem{StojmenovicII} I. Stojmenovic and S. Wen \emph{The fog computing paradigm: Scenarios and security issues}. In Computer Science and Information Systems (FedCSIS), 2014 Federated Conference on, 2014.
-
+%\vspace{-0.2cm}
 \bibitem{Evans}  D. Evans 2005. \emph{The Internet of Things: How the Next Evolution of the Internet Is Changing Everything}[online]. Disponível em: \url{http://www.cisco.com/c/dam/en_us/about/ac79/docs/innov/IoT_IBSG_0411FINAL.pdf}
-
+%\vspace{-0.2cm}
 \bibitem{Shanhe}  Shanhe Yi, Zhengrui Qin, and Qun Li. \emph{Security and Privacy Issues of Fog Computing: A Survey}. The 10th International Conference on Wireless Algorithms, Systems, and Applications (WASA), 2015.
 
 
 % \bibitem{Jaydip} Jaydip Sen. \emph{Security and Privacy Issues in Cloud Computing}[online]. Disponível em: \url{https://arxiv.org/pdf/1303.4814.pdf}.
 
 
-% \bibitem{Flueck}  Flueck, Alexander J. 2005. \emph{ECE 100}[online]. Chicago: Illinois Institute of Technology, Electrical and Computer Engineering Department, 2005 [cited 30 August 2005]. Available from World Wide Web: (http://www.ece.iit.edu/~flueck/ece100).
+ \bibitem{Flueck}  Flueck, Alexander J. 2005. \emph{ECE 100}[online]. Chicago: Illinois Institute of Technology, Electrical and Computer Engineering Department, 2005 [cited 30 August 2005]. Available from World Wide Web: (http://www.ece.iit.edu/~flueck/ece100).
 
 \end{thebibliography}
+
+\end{footnotesize}
 
 
 	\input{data-policy}
