--- a/releated-work.tex
+++ b/releated-work.tex
@@ -1,17 +1,28 @@
-\section{Related Work}
+\section*{Related Work}
 \label{sec:releated-work}
 
-This section presents the main previous work on the employment of CDN solutions on the Cloud computing and other realted technologies. 
-
-
+%This section presents the main previous work on the employment of CDN solutions on the Cloud computing and other realted technologies. 
 % Modeling and Analyzing the Influence of Chunk Size Variation on Bitrate Adaptation in DASH
-Zhang \textit{et al.} seek to focus on two aspect metrics on the client-side - rebuffering probability and average bitrate level - they theorically analyze the influence of chunk size variation on bitrate adaptation algorithm performance. while Shen \textit{et al.} deploy the a cache proxy service on Point of Presence to deal with the cache miss, the cache proxyes downlod the multimedia content for provide and how transferring chunks based on TCP impacts directly on QoE.
+Zhang~\textit{et al.}~\cite{zhangINFOCOM17} focuses on the client-side, performing the average bitrate level by the bitrate adaptation algorithm and the influence of chunk size variation, while Shen~\textit{et al.}~\cite{shenIWQoS19} works with a set of cache proxy services to deal with the cache miss, the cache proxyes downlod the multimedia content for provide and how transferring chunks based on TCP impacts directly on QoE. Rosario \textit{et al.} [5] describe a multi-tier environment which provide a live migration service from the cloud to the fog. The experimental scenarios delivery a video stream between different fog tiers with QoE support by a Virtual machine.
+Poliakov \textit{et al.} deploy a MPEG-DASH and Multi-path TCP server where dash-client can download the segments through different connections, 
+% Cache-aware load balancing of data center applications
+Archer \textit{et al.} Flash bandwidth is a critical bottleneck, motivating an application-directed RAM cache on each replica. Sending the same term reliably to the same replica would increase the chance it hits cache, and avoid polluting the other replicas’ caches.
+
+The proposed approaches could decrease the traffic load and improve the QoE, but more issues arises when the Smart Cities scenarios, such as user mobility, collaborative cache schemes over multi-edges, and number of users during flash crowds timetamps, are not fully considered. Poliakov work, differently the others, build a model which a client can receive many chunks at the same time, but not address previous issues related of the smart city scenarios.
 
 
-
-This proposal is different because of We are attempting to address in a different way. Where differents nodes can provisioning the video chunks looking for assist the content providers in provisioning the video segments. 
+%This proposal is different because of We are attempting to address in a different way. Where differents nodes can provisioning the video chunks looking for assist the content providers in provisioning the video segments. 
 % Chunk-Level Request-Grant-Transfer Mode for QoE-Sensitive Video Delivery in CDN
+% COCME: Content-Oriented Caching on the Mobile Edge for Wireless Communications
+%The proposed approaches could decrease the traffic load and improve the QoE, but more issues arises when the Smart Cities scenarios, such as user mobility, collaborative cache schemes over multi-edges, the number of polluting though replicas' caches, and number of users in flash crowds timestamps, are not fully considered. Poliakov work, differently the others, build a model which a client can receive many chunks at the same time, but not address previous issues related of the smart city scenarios.
 
+
+%Zhang focuses on the client-side on two aspect metrics on the client-side - rebuffering probability and average bitrate level - they theorically analyze the influence of chunk size variation on bitrate adaptation algorithm performance. while Shen \textit{et al.} deploy the a cache proxy service on Point of Presence to deal with the cache miss, the cache proxyes downlod the multimedia content for provide and how transferring chunks based on TCP impacts directly on QoE.
+%%% [SENSORS'18] Service Migration from Cloud to Multi-tier Fog Nodes for Multimedia Dissemination with QoE Support
+%Rosario \textit{et al.} [1] describe a multi-tier environment which provide a live migration service from the cloud to the fog. The experimental scenarios delivery a video stream between different fog tiers with QoE support by a Virtual machine. % A arquitetura é baseada no paradigma sdn para, distribuição de video com suporte a QoE. 
+%%The work split the multi-tier fog in three tier in order to their cover, storage, upload and download capacity. Important aspects could be tailored to support generic content and IoT environments, besides work with both private and public clouds. A divisão da nuvem em multiniveis se dá pelas caracteristicas do  dispositivos conectado a nuvem, e não por qualquer interconexão entre esses aparelhos. The paper tem como focus prover tecnologias capazes de tornar este ambiente factivel, e melhorar o provisionamento de conteudo de servicos de stream de video.
+%%Combining in-network caching, HTTP Adaptive Streaming and Multipath to improve video Quality Of Experience
+%Poliakov \textit{et al.} deploy a MPEG-DASH and Multi-path TCP server where dash-client can download the segments through different connections, 
 
 
 % CDN-as-a-Service Provision Over a Telecom Operator’s Cloud
