Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 @INPROCEEDINGS{zhangINFOCOM17, 
 author={T. {Zhang} and F. {Ren} and W. {Cheng} and X. {Luo} and R. {Shu} and X. {Liu}}, 
 booktitle={IEEE INFOCOM 2017 - IEEE Conference on Computer Communications}, 
@@ -12,5 +10,53 @@ keywords={hypermedia;Internet;probability;transport protocols;video streaming;ch
 doi={10.1109/INFOCOM.2017.8057057}, 
 ISSN={}, 
 month={May},}
-=======
->>>>>>> 040653b87a7f18babc9039c452005e6e7c83f749
+
+@inproceedings{shenIWQoS19,
+ author = {Shen, Gengbiao and Li, Qing and Jiang, Yong and Sinnott, Richard and Lin, Dong and Guo, Zehua and Wang, Yi},
+ title = {Chunk-level Request-grant-transfer Mode for QoE-sensitive Video Delivery in CDN},
+ booktitle = {Proceedings of the International Symposium on Quality of Service},
+ series = {IWQoS '19},
+ year = {2019},
+ isbn = {978-1-4503-6778-3},
+ location = {Phoenix, Arizona},
+ pages = {12:1--12:10},
+ articleno = {12},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/3326285.3329047},
+ doi = {10.1145/3326285.3329047},
+ acmid = {3329047},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {DASH, QoE, RDMA, content delivery network, multipoint-to-multipoint},
+} 
+
+@ARTICLE{talebComMag17, 
+author={T. {Taleb} and S. {Dutta} and A. {Ksentini} and M. {Iqbal} and H. {Flinck}}, 
+journal={IEEE Communications Magazine}, 
+title={Mobile Edge Computing Potential in Making Cities Smarter}, 
+year={2017}, 
+volume={55}, 
+number={3}, 
+pages={38-43}, 
+keywords={5G mobile communication;quality of service;video streaming;mobile edge computing potential;smart cities;video streaming;QoS;follow me edge concept;reduced latency;5G mobile systems;Streaming media;Cloud computing;Smart cities;Mobile communication;Computer architecture;Edge computing}, 
+doi={10.1109/MCOM.2017.1600249CM}, 
+ISSN={0163-6804}, 
+month={March},}
+
+@article{archerGoogleJournal2019,
+ author = {Archer, Aaron and Aydin, Kevin and Bateni, Mohammad Hossein and Mirrokni, Vahab and Schild, Aaron and Yang, Ray and Zhuang, Richard},
+ title = {Cache-aware Load Balancing of Data Center Applications},
+ journal = {Proc. VLDB Endow.},
+ issue_date = {February 2019},
+ volume = {12},
+ number = {6},
+ month = feb,
+ year = {2019},
+ issn = {2150-8097},
+ pages = {709--723},
+ numpages = {15},
+ url = {https://doi.org/10.14778/3311880.3311887},
+ doi = {10.14778/3311880.3311887},
+ acmid = {3322444},
+ publisher = {VLDB Endowment},
+} 
