--- a/releated-work.tex
+++ b/releated-work.tex
@@ -6,7 +6,7 @@
 Zhang~\textit{et al.}~\cite{zhangINFOCOM17} focuses on the client-side, performing the average bitrate level by the bitrate adaptation algorithm and the influence of chunk size variation, while Shen~\textit{et al.}~\cite{shenIWQoS19} works with a set of cache proxy services to deal with the cache miss, the cache proxyes downlod the multimedia content for provide and how transferring chunks based on TCP impacts directly on QoE. Rosario \textit{et al.} [5] describe a multi-tier environment which provide a live migration service from the cloud to the fog. The experimental scenarios delivery a video stream between different fog tiers with QoE support by a Virtual machine.
 Poliakov \textit{et al.} deploy a MPEG-DASH and Multi-path TCP server where dash-client can download the segments through different connections, 
 % Cache-aware load balancing of data center applications
-Archer \textit{et al.} Flash bandwidth is a critical bottleneck, motivating an application-directed RAM cache on each replica. Sending the same term reliably to the same replica would increase the chance it hits cache, and avoid polluting the other replicas’ caches.
+Archer \textit{et al.}~\cite{archerGoogleJournal2019} Flash bandwidth is a critical bottleneck, motivating an application-directed RAM cache on each replica. Sending the same term reliably to the same replica would increase the chance it hits cache, and avoid polluting the other replicas’ caches.
 
 The proposed approaches could decrease the traffic load and improve the QoE, but more issues arises when the Smart Cities scenarios, such as user mobility, collaborative cache schemes over multi-edges, and number of users during flash crowds timetamps, are not fully considered. Poliakov work, differently the others, build a model which a client can receive many chunks at the same time, but not address previous issues related of the smart city scenarios.
 
