Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -60,3 +60,52 @@ month={March},}
  acmid = {3322444},
  publisher = {VLDB Endowment},
 } 
+
+@INPROCEEDINGS{gamaUCC2019, 
+author={E. {S. Gama} and R. {Immich} and L. {F. Bittencourt}}, 
+booktitle={2018 IEEE/ACM International Conference on Utility and Cloud Computing Companion (UCC Companion)}, 
+title={Towards a Multi-Tier Fog/Cloud Architecture for Video Streaming}, 
+year={2018}, 
+volume={}, 
+number={}, 
+pages={13-14}, 
+keywords={cloud computing;Internet;middleware;ubiquitous computing;video streamingg;video streaming services;core network congestion;multitier architecture;fog computing environment;ETSI-NFV architecture;fog-cloud computing;classified hierarchical tiers;cloud-level architecture;multitier fog-cloud architecture;Smart City environments;quality of experience;Streaming media;Computer architecture;Cloud computing;Quality of experience;Servers;Edge computing;Transcoding;fog computing;video streaming services;cloud computing;multi tier fog;Quality of Experience}, 
+doi={10.1109/UCC-Companion.2018.00022}, 
+ISSN={}, 
+month={Dec},}
+
+
+@Article{rosarioSENSORS2018,
+AUTHOR = {Rosário, Denis and Schimuneck, Matias and Camargo, João and Nobre, Jéferson and Both, Cristiano and Rochol, Juergen and Gerla, Mario},
+TITLE = {Service Migration from Cloud to Multi-tier Fog Nodes for Multimedia Dissemination with QoE Support},
+JOURNAL = {Sensors},
+VOLUME = {18},
+YEAR = {2018},
+NUMBER = {2},
+ARTICLE-NUMBER = {329},
+URL = {https://www.mdpi.com/1424-8220/18/2/329},
+ISSN = {1424-8220},
+ABSTRACT = {A wide range of multimedia services is expected to be offered for mobile users via various wireless access networks. Even the integration of Cloud Computing in such networks does not support an adequate Quality of Experience (QoE) in areas with high demands for multimedia contents. Fog computing has been conceptualized to facilitate the deployment of new services that cloud computing cannot provide, particularly those demanding QoE guarantees. These services are provided using fog nodes located at the network edge, which is capable of virtualizing their functions/applications. Service migration from the cloud to fog nodes can be actuated by request patterns and the timing issues. To the best of our knowledge, existing works on fog computing focus on architecture and fog node deployment issues. In this article, we describe the operational impacts and benefits associated with service migration from the cloud to multi-tier fog computing for video distribution with QoE support. Besides that, we perform the evaluation of such service migration of video services. Finally, we present potential research challenges and trends.},
+DOI = {10.3390/s18020329}
+}
+
+@misc{kreuzberger2016amust,
+  title={AMuSt Framework - Adaptive Multimedia Streaming Simulation Framework for ns-3 and ndnSIM},
+  author={Kreuzberger, Christian and Posch, Daniel and Hellwagner, Hermann},
+  journal={https://github.com/ChristianKreuzberger/amust-simulator},
+  year={2016}
+}
+
+@phdthesis{poliakovPHD2018,
+  TITLE = {{Combining in-network caching, HTTP Adaptive Streaming and Multipath to improve video Quality Of Experience}},
+  AUTHOR = {Poliakov, Vitalii},
+  URL = {https://hal.archives-ouvertes.fr/tel-01968837},
+  SCHOOL = {{Universit{\'e} C{\^o}te d'Azur}},
+  YEAR = {2018},
+  MONTH = Dec,
+  KEYWORDS = {Internet video streaming ; Quality of Experience ; Content Delivery Network ; Linear optimisation ; Diffusion vid{\'e}o sur Internet ; HTTP Adaptive Streaming ; Caching ; Multipath ; Qualit{\'e} d'Experience ; R{\'e}seau de diffusion de contenu ; Optimisation lin{\'e}aire},
+  TYPE = {Theses},
+  PDF = {https://hal.archives-ouvertes.fr/tel-01968837/file/thesis.pdf},
+  HAL_ID = {tel-01968837},
+  HAL_VERSION = {v1},
+}
