--- a/research-goals.tex
+++ b/research-goals.tex
@@ -4,7 +4,7 @@
 \subsection*{Research Goals}
 \label{sec:research-goals}
 
-Considering a reliable and high-quality video delivery architecture to be used in the Smart City environments~\cite{gamaUCC2019}. The proposed scheme will take advantage of several network-related technologies such as Cloud, Fog, and Edge Computing, as well as intelligent microservice placement and chaining. Figure~\ref{fig:scenario-arch}~(left-side) depicts a multi-tier network architecture, which is composed of a heterogeneous set of devices and applications using the resources and also offers a multi-access communication technology, such as 5G and WiFi. Based on these premises, as a novelty, we consider users to have a simultaneous multipath connectivity in different nodes~\cite{poliakovPHD2018}.
+Considering a reliable and high-quality video delivery DASH-based to be used in the Smart City environments~\cite{gamaUCC2019, KreuzbergerWorkshop2016}. The proposed scheme will take advantage of several network-related technologies such as Cloud, Fog, and Edge Computing, as well as intelligent microservice placement and chaining. Figure~\ref{fig:scenario-arch}~(left-side) depicts a multi-tier network architecture, which is composed of a heterogeneous set of devices and applications using the resources and also offers a multi-access communication technology, such as 5G and WiFi. Based on these premises, as a novelty, we consider users to have a simultaneous multipath connectivity in different nodes~\cite{poliakovPHD2018, Velasquez2018}.
 On the right-side we describe a part of the parameters that should be assessed to define what microservices need to be deployed and what is the most suitable tier to deploy them. Notice that the parameters is down tier for feedback is distinct of the others tiers.
 The assessed parameters include, but are not limited to, the user's profile, the load of the local cell, the link quality, the motion complexity of the videos, and also smart city details such as the location and the traced route in case of users with mobility. Some of the nodes can be stationary, but others can range from low to high mobility patterns. %In order to take into consideration all these details, the proposed methods will have to fetch information from the routing protocols as well as the cell and subscriber radio interface information, such as location, cell load, and link quality.
 %, the type of the video application (eHealth, entertainment, augmented or virtual reality, 360 videos), the motion complexity of the videos, and also smart city details such as the location and the traced route in case of users with mobility. To take into consideration the node’s mobility. Some of them can be stationary, but others can range from low to high mobility patterns. In order to take into consideration all these details, the proposed methods will have to fetch information from the routing protocols as well as the cell and subscriber radio interface information, such as location, cell load, and link quality.
