--- a/references.bib
+++ b/references.bib
@@ -109,3 +109,70 @@ DOI = {10.3390/s18020329}
   HAL_ID = {tel-01968837},
   HAL_VERSION = {v1},
 }
+
+@inproceedings{KreuzbergerWorkshop2016,
+ author = {Kreuzberger, Christian and Rainer, Benjamin and Hellwagner, Hermann and Toni, Laura and Frossard, Pascal},
+ title = {A Comparative Study of DASH Representation Sets Using Real User Characteristics},
+ booktitle = {Proceedings of the 26th International Workshop on Network and Operating Systems Support for Digital Audio and Video},
+ series = {NOSSDAV '16},
+ year = {2016},
+ isbn = {978-1-4503-4356-5},
+ location = {Klagenfurt, Austria},
+ pages = {4:1--4:6},
+ articleno = {4},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2910642.2910647},
+ doi = {10.1145/2910642.2910647},
+ acmid = {2910647},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamic adaptive streaming over HTTP, encoding, representations},
+}
+
+@Article{Velasquez2018,
+author="Velasquez, Karima
+and Abreu, David Perez
+and Assis, Marcio R. M.
+and Senna, Carlos
+and Aranha, Diego F.
+and Bittencourt, Luiz F.
+and Laranjeiro, Nuno
+and Curado, Marilia
+and Vieira, Marco
+and Monteiro, Edmundo
+and Madeira, Edmundo",
+title="Fog orchestration for the Internet of Everything: state-of-the-art and research challenges",
+journal="Journal of Internet Services and Applications",
+year="2018",
+month="Jul",
+day="18",
+volume="9",
+number="1",
+pages="14",
+abstract="Recent developments in telecommunications have allowed drawing new paradigms, including the Internet of Everything, to provide services by the interconnection of different physical devices enabling the exchange of data to enrich and automate people's daily activities; and Fog computing, which is an extension of the well-known Cloud computing, bringing tasks to the edge of the network exploiting characteristics such as lower latency, mobility support, and location awareness. Combining these paradigms opens a new set of possibilities for innovative services and applications; however, it also brings a new complex scenario that must be efficiently managed to properly fulfill the needs of the users. In this scenario, the Fog Orchestrator component is the key to coordinate the services in the middle of Cloud computing and Internet of Everything. In this paper, key challenges in the development of the Fog Orchestrator to support the Internet of Everything are identified, including how they affect the tasks that a Fog service Orchestrator should perform. Furthermore, different service Orchestrator architectures for the Fog are explored and analyzed in order to identify how the previously listed challenges are being tackled. Finally, a discussion about the open challenges, technological directions, and future of the research on this subject is presented.",
+issn="1869-0238",
+doi="10.1186/s13174-018-0086-3",
+url="https://doi.org/10.1186/s13174-018-0086-3"
+}
+
+
+@INPROCEEDINGS{ye:ITC17, 
+author={Z. Ye and F. D. Pellegrini and R. El-Azouzi and L. Maggi and T. Jimenez}, 
+booktitle={2017 29th International Teletraffic Congress (ITC 29)}, 
+title={Quality-Aware DASH Video Caching Schemes at Mobile Edge}, 
+year={2017}, 
+volume={1}, 
+number={}, 
+pages={205-213}, 
+keywords={cache storage;mobile radio;quality of experience;video coding;video streaming;rate-agnostic counterparts;aggregated users;video contents;cache composition both versus popularity;rate-aware caching schemes;caching policies;video-streaming experience;mobile terminals;rate-adaptive video playout mechanisms;candidate traffic category;video streaming;mobile networks;quality of experience;mobile edge caching;quality-aware DASH video caching schemes;Streaming media;Mobile communication;Servers;Mobile computing;Bit rate;Static VAr compensators;mobile edge caching;scalable video coding;rate-aware caching}, 
+doi={10.23919/ITC.2017.8064357}, 
+ISSN={}, 
+month={Sept},}
+
+@ONLINE{cisco:forecast,
+title = {Cisco Visual Networking Index: Global Mobile Data
+Traffic Forecast Update, 2016–2021},
+year = {2016},
+url = {https://www.cisco.com/c/en/us/solutions/collateral/service-provider/visual-networking-index-vni/mobile-white-paper-c11-520862.pdf},
+note = {; accessed 20-august-2018}
+}
